# contract-template

./: .genignore  Cargo.toml  README.md  build.sh
src/: lib.rs
