[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
name = "{{project-name}}"
crate-type = ["cdylib"]

[dependencies]
contract-sdk = { git = "https://github.com/cennznet/contract-sdk.git", version = "0.1.2", default-features = false }
parity-codec = { version = "~4", default-features = false, features = ["derive"] }

[features]
default = [
	"generate-api-description"
]
test-env = [
	"contract-sdk/test-env",
]
generate-api-description = [
	"contract-sdk/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
